--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -21,6 +21,7 @@
 	<script type="text/javascript" src="AlienFighter.js"></script>
 	<script type="text/javascript" src="Asteroid.js"></script>
 	<script type="text/javascript" src="AsteroidSpawn.js"></script>
+	<script type="text/javascript" src="Projectile.js"></script>
 	<script type="text/javascript" src="Shot.js"></script>
 	<script type="text/javascript" src="Missile.js"></script>
 	<script type="text/javascript" src="MissileCruiser.js"></script>
