vibe: refactor constants

--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -12,6 +12,7 @@
 	<title>Game Engine</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link id="css" rel="stylesheet" href="css.css"/ >
+	<script type="text/javascript" src="GameConfig.js"></script>
 	<script type="text/javascript" src="GPTEngine.js"></script>
 	<script type="text/javascript" src="Vector2D.js"></script>
     <script type="text/javascript" src="GameEntity.js"></script>
