vibe: refactor pickNewTarget() duplication

--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -15,6 +15,7 @@
 	<script type="text/javascript" src="GameConfig.js"></script>
 	<script type="text/javascript" src="GPTEngine.js"></script>
 	<script type="text/javascript" src="Vector2D.js"></script>
+	<script type="text/javascript" src="NPCAIUtils.js"></script>
     <script type="text/javascript" src="GameEntity.js"></script>
 	<script type="text/javascript" src="Sprite.js"></script>
 	<script type="text/javascript" src="NPC.js"></script>
