--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -319,16 +319,62 @@
 		}
 
 		// High Score Management
+		/**
+		 * Sanitizes user input to prevent XSS attacks
+		 * Removes HTML tags and dangerous characters while supporting international names
+		 * Allows Unicode letters (all languages), numbers, spaces, and safe punctuation
+		 * @param {string} input - Raw user input
+		 * @returns {string} Sanitized string safe for display
+		 */
+		function sanitizeInput(input) {
+			if (!input) return '';
+
+			// Convert to string and trim
+			let sanitized = String(input).trim();
+
+			// Remove any HTML tags
+			sanitized = sanitized.replace(/<[^>]*>/g, '');
+
+			// As this is all local, I don't care about "dangerous Unicode ranges" where "danger" is limited to spoofing
+
+			// Remove remaining angle brackets to prevent any HTML/script injection
+			sanitized = sanitized.replace(/[<>]/g, '');
+
+			// Allow: Unicode letters (\p{L}), numbers (\p{N}), combining marks (\p{M} for accents),
+			// spaces, and safe punctuation (.-_')
+			// This supports names in Chinese (中文), Japanese (日本語), Arabic (العربية),
+			// Hindi (हिन्दी), Cyrillic (Русский), Greek (Ελληνικά), etc.
+			sanitized = sanitized.replace(/[^\p{L}\p{N}\p{M}\s.\-_']/gu, '');
+
+			// Limit consecutive spaces to single space
+			sanitized = sanitized.replace(/\s+/g, ' ');
+
+			// Trim again after replacements
+			sanitized = sanitized.trim();
+
+			return sanitized;
+		}
+
 		function getHighScores() {
 			const stored = localStorage.getItem('highScores');
-			return stored ? JSON.parse(stored) : [];
+			if (!stored) return [];
+
+			const scores = JSON.parse(stored);
+			// Sanitize all names when loading (defense against legacy data)
+			return scores.map(score => ({
+				...score,
+				name: sanitizeInput(score.name)
+			}));
 		}
 
 		function saveHighScore(name, score) {
 			const highScores = getHighScores();
 
+			// Sanitize the name to prevent XSS
+			const sanitizedName = sanitizeInput(name);
+
 			const newScore = {
-				name: name,
+				name: sanitizedName,
 				score: score,
 				date: new Date().toISOString()
 			};
@@ -426,7 +472,13 @@
 						maxLength: 15,
 						autofocus: true,
 						onChange: (value) => {
-							playerName = value;
+							// Sanitize input in real-time to prevent XSS
+							playerName = sanitizeInput(value);
+							// Update the input field with sanitized value
+							const input = document.getElementById('playerNameInput');
+							if (input && input.value !== playerName) {
+								input.value = playerName;
+							}
 						}
 					},
 					{
